<resources>
    <string name="app_name">Food Rescue</string>
    <string name="announce">Announce</string>
    <string name="custom_message">Customize Message:</string>
    <string name="customize_exact_location">Fine-tune Exact Location:</string>
    <string name="select_nearest_building">Select Nearest Building:</string>
    <string name="notifications_when_food_is_available">Notify when food is available</string>
    <string name="notifications_when_food_is_no_longer_available">Notify when food is no longer available</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="crosshair_location_selector">Crosshair location selector</string>
    <string name="preference_file_key">edu.ewu.team1.foodrescue.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_main">Food Rescue</string>
    <string name="title_feeder">Give Food</string>
    <string name="title_eater">Receive Food</string>
    <string name="title_sso">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="confirm_send">Are you sure you want to send this notification to many students phones?</string>
    <string name="confirm_logout">"Are you sure you want to log out?\nYou will only be able to sign in again on campus"</string>
    <string name="availability">Available For: &lt;%1$d %2$s</string>
    <string name="explanation">This app requires that you sign in with your EWU NetID in order to send or receive notifications about free food</string>
	<string name="get_directions">Get Directions</string>
    <string name="select_estimated_time_of_availability">Select estimated time of availability:</string>
	<string name="empty_list">Currently no food events</string>
</resources>
