<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="edu.ewu.team1.foodrescue.fragments.EaterFragment">

	<TextView
		android:id="@+id/textView3"
		android:layout_width="wrap_content"
		android:layout_height="17dp"
		android:layout_marginBottom="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginStart="8dp"
		android:text="@string/notification_settings"
		app:layout_constraintBottom_toTopOf="@+id/switchEventStart"
		app:layout_constraintStart_toStartOf="parent" />

	<Switch
		android:id="@+id/switchEventStart"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:text="@string/notifications_when_food_is_available"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent" />

	<ListView
		android:id="@+id/listViewFoodEvents"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		app:layout_constraintBottom_toTopOf="@+id/textView3"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.49"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/empty"
		style="@android:style/TextAppearance.Large"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginStart="16dp"
		android:padding="16dp"
		android:visibility="gone"
		android:layout_marginTop="8dp"
		android:background="@drawable/rounded_bg"
		android:gravity="center"
		android:text="@string/empty_list"
		app:layout_constraintBottom_toBottomOf="@+id/listViewFoodEvents"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/listViewFoodEvents" />

</android.support.constraint.ConstraintLayout>
